# serializer version: 1
# name: TestIORTCWGenerator.test_generate
  tuple(
    list([
      '/usr/bin/iortcw/iowolfsp',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'XDG_DATA_HOME': '/userdata/roms',
    }),
  )
# ---
# name: TestIORTCWGenerator.test_generate[config]
  '''
  seta r_mode "-1"
  seta r_noborder "1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_inGameVideo "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta in_joystick "1"
  seta in_joystickUseAnalog "1"
  bind PAD0_A ""+moveup""
  bind PAD0_X ""+movedown""
  bind PAD0_Y ""+useitem""
  bind PAD0_B ""+activate""
  bind PAD0_LEFTSHOULDER "weapnext"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  seta cl_renderer "opengl1"
  seta r_swapInterval "0"
  seta com_maxfps "60"
  seta r_ext_texture_filter_anisotropic "0"
  seta r_ext_max_anisotropy "2"
  seta r_ext_multisample "0"
  seta r_ext_framebuffer_multisample "0"
  seta com_introplayed "0"
  seta cl_language "0"
  
  '''
# ---
# name: TestIORTCWGenerator.test_generate_config[{'iortcw_aa': '2'}]
  '''
  seta r_mode "-1"
  seta r_noborder "1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_inGameVideo "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta in_joystick "1"
  seta in_joystickUseAnalog "1"
  bind PAD0_A ""+moveup""
  bind PAD0_X ""+movedown""
  bind PAD0_Y ""+useitem""
  bind PAD0_B ""+activate""
  bind PAD0_LEFTSHOULDER "weapnext"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  seta cl_renderer "opengl1"
  seta r_swapInterval "0"
  seta com_maxfps "60"
  seta r_ext_texture_filter_anisotropic "0"
  seta r_ext_max_anisotropy "2"
  seta r_ext_multisample "2"
  seta r_ext_framebuffer_multisample "2"
  seta com_introplayed "0"
  seta cl_language "0"
  
  '''
# ---
# name: TestIORTCWGenerator.test_generate_config[{'iortcw_api': 'rend2'}]
  '''
  seta r_mode "-1"
  seta r_noborder "1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_inGameVideo "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta in_joystick "1"
  seta in_joystickUseAnalog "1"
  bind PAD0_A ""+moveup""
  bind PAD0_X ""+movedown""
  bind PAD0_Y ""+useitem""
  bind PAD0_B ""+activate""
  bind PAD0_LEFTSHOULDER "weapnext"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  seta cl_renderer "rend2"
  seta r_swapInterval "0"
  seta com_maxfps "60"
  seta r_ext_texture_filter_anisotropic "0"
  seta r_ext_max_anisotropy "2"
  seta r_ext_multisample "0"
  seta r_ext_framebuffer_multisample "0"
  seta com_introplayed "0"
  seta cl_language "0"
  
  '''
# ---
# name: TestIORTCWGenerator.test_generate_config[{'iortcw_filtering': '4'}]
  '''
  seta r_mode "-1"
  seta r_noborder "1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_inGameVideo "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta in_joystick "1"
  seta in_joystickUseAnalog "1"
  bind PAD0_A ""+moveup""
  bind PAD0_X ""+movedown""
  bind PAD0_Y ""+useitem""
  bind PAD0_B ""+activate""
  bind PAD0_LEFTSHOULDER "weapnext"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  seta cl_renderer "opengl1"
  seta r_swapInterval "0"
  seta com_maxfps "60"
  seta r_ext_texture_filter_anisotropic "1"
  seta r_ext_max_anisotropy "4"
  seta r_ext_multisample "0"
  seta r_ext_framebuffer_multisample "0"
  seta com_introplayed "0"
  seta cl_language "0"
  
  '''
# ---
# name: TestIORTCWGenerator.test_generate_config[{'iortcw_fps': '120'}]
  '''
  seta r_mode "-1"
  seta r_noborder "1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_inGameVideo "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta in_joystick "1"
  seta in_joystickUseAnalog "1"
  bind PAD0_A ""+moveup""
  bind PAD0_X ""+movedown""
  bind PAD0_Y ""+useitem""
  bind PAD0_B ""+activate""
  bind PAD0_LEFTSHOULDER "weapnext"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  seta cl_renderer "opengl1"
  seta r_swapInterval "0"
  seta com_maxfps "120"
  seta r_ext_texture_filter_anisotropic "0"
  seta r_ext_max_anisotropy "2"
  seta r_ext_multisample "0"
  seta r_ext_framebuffer_multisample "0"
  seta com_introplayed "0"
  seta cl_language "0"
  
  '''
# ---
# name: TestIORTCWGenerator.test_generate_config[{'iortcw_language': '1'}]
  '''
  seta r_mode "-1"
  seta r_noborder "1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_inGameVideo "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta in_joystick "1"
  seta in_joystickUseAnalog "1"
  bind PAD0_A ""+moveup""
  bind PAD0_X ""+movedown""
  bind PAD0_Y ""+useitem""
  bind PAD0_B ""+activate""
  bind PAD0_LEFTSHOULDER "weapnext"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  seta cl_renderer "opengl1"
  seta r_swapInterval "0"
  seta com_maxfps "60"
  seta r_ext_texture_filter_anisotropic "0"
  seta r_ext_max_anisotropy "2"
  seta r_ext_multisample "0"
  seta r_ext_framebuffer_multisample "0"
  seta com_introplayed "0"
  seta cl_language "1"
  
  '''
# ---
# name: TestIORTCWGenerator.test_generate_config[{'iortcw_skip_video': '0'}]
  '''
  seta r_mode "-1"
  seta r_noborder "1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_inGameVideo "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta in_joystick "1"
  seta in_joystickUseAnalog "1"
  bind PAD0_A ""+moveup""
  bind PAD0_X ""+movedown""
  bind PAD0_Y ""+useitem""
  bind PAD0_B ""+activate""
  bind PAD0_LEFTSHOULDER "weapnext"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  seta cl_renderer "opengl1"
  seta r_swapInterval "0"
  seta com_maxfps "60"
  seta r_ext_texture_filter_anisotropic "0"
  seta r_ext_max_anisotropy "2"
  seta r_ext_multisample "0"
  seta r_ext_framebuffer_multisample "0"
  seta com_introplayed "0"
  seta cl_language "0"
  
  '''
# ---
# name: TestIORTCWGenerator.test_generate_config[{'iortcw_skip_video': '1'}]
  '''
  seta r_mode "-1"
  seta r_noborder "1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_inGameVideo "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta in_joystick "1"
  seta in_joystickUseAnalog "1"
  bind PAD0_A ""+moveup""
  bind PAD0_X ""+movedown""
  bind PAD0_Y ""+useitem""
  bind PAD0_B ""+activate""
  bind PAD0_LEFTSHOULDER "weapnext"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  seta cl_renderer "opengl1"
  seta r_swapInterval "0"
  seta com_maxfps "60"
  seta r_ext_texture_filter_anisotropic "0"
  seta r_ext_max_anisotropy "2"
  seta r_ext_multisample "0"
  seta r_ext_framebuffer_multisample "0"
  seta com_introplayed "1"
  seta cl_language "0"
  
  '''
# ---
# name: TestIORTCWGenerator.test_generate_config[{'iortcw_vsync': '0'}]
  '''
  seta r_mode "-1"
  seta r_noborder "1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_inGameVideo "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta in_joystick "1"
  seta in_joystickUseAnalog "1"
  bind PAD0_A ""+moveup""
  bind PAD0_X ""+movedown""
  bind PAD0_Y ""+useitem""
  bind PAD0_B ""+activate""
  bind PAD0_LEFTSHOULDER "weapnext"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  seta cl_renderer "opengl1"
  seta r_swapInterval "0"
  seta com_maxfps "60"
  seta r_ext_texture_filter_anisotropic "0"
  seta r_ext_max_anisotropy "2"
  seta r_ext_multisample "0"
  seta r_ext_framebuffer_multisample "0"
  seta com_introplayed "0"
  seta cl_language "0"
  
  '''
# ---
# name: TestIORTCWGenerator.test_generate_config[{'iortcw_vsync': '1'}]
  '''
  seta r_mode "-1"
  seta r_noborder "1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_inGameVideo "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta in_joystick "1"
  seta in_joystickUseAnalog "1"
  bind PAD0_A ""+moveup""
  bind PAD0_X ""+movedown""
  bind PAD0_Y ""+useitem""
  bind PAD0_B ""+activate""
  bind PAD0_LEFTSHOULDER "weapnext"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  seta cl_renderer "opengl1"
  seta r_swapInterval "1"
  seta com_maxfps "60"
  seta r_ext_texture_filter_anisotropic "0"
  seta r_ext_max_anisotropy "2"
  seta r_ext_multisample "0"
  seta r_ext_framebuffer_multisample "0"
  seta com_introplayed "0"
  seta cl_language "0"
  
  '''
# ---
# name: TestIORTCWGenerator.test_generate_existing
  '''
  seta r_mode "-1"
  seta r_noborder "1"
  seta r_fullscreen "1"
  seta r_allowResize "0"
  seta r_centerWindow "1"
  seta r_inGameVideo "1"
  seta r_customheight ""1080""
  seta r_customwidth ""1920""
  seta in_joystick "1"
  seta in_joystick "1"
  bind PAD0_A ""+moveup""
  bind PAD0_X ""+movedown""
  bind PAD0_Y ""+useitem""
  bind PAD0_B ""+activate""
  bind PAD0_LEFTSHOULDER "weapnext"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  seta cl_renderer "opengl1"
  seta r_swapInterval "0"
  seta com_maxfps "60"
  seta r_ext_texture_filter_anisotropic "0"
  seta r_ext_max_anisotropy "2"
  seta r_ext_multisample "0"
  seta r_ext_framebuffer_multisample "0"
  seta com_introplayed "0"
  seta cl_language "0"
  seta in_joystickUseAnalog "1"
  
  '''
# ---
# name: TestIORTCWGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
      'menu': 'KEY_ESC',
      'pause': 'KEY_ESC',
      'restore_state': 'KEY_F9',
      'save_state': 'KEY_F5',
    }),
    'name': 'iortcw',
  })
# ---
